# homedir

./: .ackrc  .agignore  .authinfo  .bash_profile  .bashrc  .cedet  .csirc  .emacs  .emacs-basic  .flake8rc  .gitconfig  .gitignore  .hgrc  .offlineimap.py  .offlineimaprc  .org-mode  .ripgreprc  .sbclrc  .spacemacs  README  Readme.md  Spacemacs.md  basic-init.el  diary.txt
.config/common-lisp/source-registry.conf.d/: projects.conf
.config/pokoy/: pokoyrc
.el-packages/: Makefile  advanced_emacs_commands.txt
.emacs.d/: init-basic.el  init-cedet.el  init-org.el  init.el
.emacs.d/el-packages/: Makefile  advanced_emacs_commands.txt
.emacs.d/lisp/: init-cedet.el  init-debian.el  init-org.el
.fonts/: Readme
.lein/: profiles.clj
code-books/cl-paip/: .gitignore  Makefile  auxfns.lisp  clos.lisp  cmacsyma.lisp  compile1.lisp  compile2.lisp  compile3.lisp  compopt.lisp  edge-tab.lisp  eliza-pm.lisp  eliza.lisp  eliza1.lisp  examples.lisp  gps-srch.lisp  gps.lisp  gps1.lisp  grammar.lisp  interp1.lisp  interp2.lisp  interp3.lisp  intro.lisp  krep.lisp  krep1.lisp  krep2.lisp  lexicon.lisp  loop.lisp  macsyma.lisp  macsymar.lisp  mycin-r.lisp  mycin.lisp  othello.lisp  othello2.lisp  overview.lisp  patmatch.lisp  prolog.lisp  prolog1.lisp  prologc.lisp  prologc1.lisp  prologc2.lisp  (+11 more)
code-books/land-of-lisp/: .gitignore  README.txt  dice_of_doom_v1.lisp  dice_of_doom_v2.lisp  dice_of_doom_v3.lisp  dice_of_doom_v4.lisp  game-repl-enhanced.lisp  game-repl.lisp  grand-theft-wumpus.lisp  guess-my-number.lisp  http.lisp  land-of-lisp.asd  lazy.lisp  loop-game.lisp  orc-battle.lisp  package.lisp  robots.lisp  wizards-adventure.lisp
code-books/land-of-lisp/graph-util/: graph-util.lisp
code-books/land-of-lisp/sockets/: client.lisp  server.lisp
code-books/land-of-lisp/svg/: svg-util.lisp  svg.lisp
code-books/sicp/schython/: parser.scm  py-meta.scm  py-primitives.scm  schython.text
code-fragmets/common_lisp/: lisp_style.txt
code-fragmets/cpp/project.template/: AUTHORS  CMakeLists.txt  COPYING  ChangeLog  Doxyfile  INSTALL  LICENSE  Makefile  README  configure
code-fragmets/cpp/project.template/docs/: mainpage.txt
code-fragmets/cpp/project.template/src/base/: ObjectPool.h  ObjectPoolTest.cpp  SmartPointer.h  SmartPointerTest.cpp  inlines.h  macros.h
code-fragmets/cpp/project.template/src/helper.package/: CMakeLists.txt  Car.cpp  Car.h  Makefile  PkgConf.h  PkgConf.h.cmake  PkgDoc.h  subject_extract.cpp  subject_extract.h
code-fragmets/cpp/project.template/src/helper.package/bin.debug/: Car.d  subject_extract.d
code-fragmets/cpp/project.template/src/helper.package/test/: CMakeLists.txt  test_Foo.cpp  test_main.cpp  test_subject_extract.cpp
code-fragmets/cpp/project.template/src/main.package/: AppConf.h  AppConf.h.cmake  CMakeLists.txt  Makefile  project_template.cpp
code-fragmets/cpp/project.template/src/main.package/bin.debug/: project_template.d
code-fragmets/cpp/project.template/src/parser.package/: CMakeLists.txt  Makefile
code-fragmets/cpp/project.template/src/parser.package/grammar/: lexer.ll  parser.yy
code-fragmets/cpp/project.template/src/parser.package/test/: CMakeLists.txt
code-fragmets/cpp/project.template/tools/share/cmake_modules/: DocumentationTargets.cmake  FindGlog.cmake  FindSoci.cmake
code-fragmets/cpp/study/: API.txt  classes.txt  gcc_gdb_gprof.txt
code-fragmets/cpp/study/templates/: Grid.h  GridTest.cpp  templates.txt
code-fragmets/flasky/: .gitignore  AUTHORS  LICENSE  Makefile  README  config.py  manage.py  requirements-dev.txt  requirements.txt  setup.py
code-fragmets/flasky/app/: __init__.py  email.py  models.py
code-fragmets/flasky/app/main/: errors.py  forms.py  views.py
code-fragmets/flasky/app/templates/macros/: README
code-fragmets/flasky/app/translations/: README
code-fragmets/flasky/docs/: conf.py
code-fragmets/flasky/migrations/: env.py
code-fragmets/flasky/migrations/versions/: README
code-fragmets/flasky/tests/: test_basics.py
code-fragmets/java/iterator_task/: .gitignore  AUTHORS  INSTALL  INTERVIEW_QUESTION  Makefile  checkstyle-suppressions.xml  checkstyle.xml  findbugs-exclude.xml  pom.xml  version.properties
code-fragmets/java/iterator_task/src/main/java/com/zlatozar/: ElegantSolution.java  FileLineIterator.java  NotOptimalSolution.java
code-fragmets/java/iterator_task/src/test/java/com/zlatozar/: ElegantSolutionTest.java  FileLineIteratorTest.java  NotOptimalSolutionTest.java
code-fragmets/java/iterator_task/src/test/resources/: big_file.txt  create_big_file.py  small_file.txt
code-fragmets/jython/smook/: .gitignore  INSTALL  Makefile  NOTES  README  pom.xml  pysrc
code-fragmets/jython/smook/src/main/java/com/smook/: AbstractJythonInit.java  InitJython.java  SampleTest.java  package-info.java
code-fragmets/jython/smook/src/main/resources/: __run__.py
code-fragmets/jython/smook/src/main/resources/Lib/: Makefile  STYLE  docs_style.py  requirements-dev.txt  requirements.txt
code-fragmets/jython/smook/src/main/resources/Lib/examples/: README  __init__.py
code-fragmets/jython/smook/src/main/resources/Lib/smook/: __init__.py
code-fragmets/jython/smook/src/main/resources/Lib/smook/tests/: __init__.py
code-fragmets/shell/: firewall  script_template.sh
mac/: .bash_profile  .emacs
projects/c-lang/: .gitignore  .gitmodules  README.md  make-deps.sh
projects/c-lang/config/: c99.c
projects/c-lang/docs/: C_lang_notes.txt
projects/c-lang/src/common/include/common/: macros.h
projects/c-lang/src/macros/: macros.h
projects/lisp/: README
